# deink

./: .gitignore  LICENSE  README.md  pyproject.toml
src/deink/: __init__.py  __main__.py  cli.py  converter.py
