[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deink"
version = "0.1.0"
description = "Strips colored backgrounds from PDFs for clean printing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ksmith", email = "ksmith@centricle.com" },
]
keywords = ["pdf", "print", "ink", "background", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
    "Topic :: Utilities",
]
dependencies = [
    "pymupdf>=1.24",
]

[project.scripts]
deink = "deink.cli:main"

[project.urls]
Homepage = "https://github.com/centricle/deink"
Repository = "https://github.com/centricle/deink"
Issues = "https://github.com/centricle/deink/issues"
